force-app/main/default/objects/Mobility_Initiative__c/Mobility_Initiative__c.object-meta.xml
<CustomObject>
    <label>Mobility Initiative</label>
    <nameField>
        <displayFormat>MI-{0000}</displayFormat>
        <label>Initiative Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobility Initiatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>