force-app/main/default/objects/Mobility_Initiative__c/fields/Initiative_Status__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Status__c</fullName>
    <label>Initiative Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identified</fullName>
                <default>true</default>
                <label>Identified</label>
            </value>
            <value>
                <fullName>Proposed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>In Execution</fullName>
            </value>
            <value>
                <fullName>Monitoring &amp; Review</fullName>
            </value>
            <value>
                <fullName>Adjusted</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>