force-app/main/default/objects/Mobility_Initiative__c/fields/Initiative_Title__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Title__c</fullName>
    <label>Initiative Title</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>