force-app/main/default/objects/Mobility_Initiative__c/fields/Outcome_Status__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Status__c</fullName>
    <label>Outcome Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Partially Successful</fullName>
            </value>
            <value>
                <fullName>Not Successful</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>