force-app/main/default/objects/Mobility_Initiative__c/fields/Owning_Department__c.field-meta.xml
<CustomField>
    <fullName>Owning_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owning Department</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mobility Initiatives</relationshipLabel>
    <relationshipName>Mobility_Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>