force-app/main/default/objects/Mobility_Initiative__c/fields/Related_Urban_Problem__c.field-meta.xml
<CustomField>
    <fullName>Related_Urban_Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Urban Problem</label>
    <referenceTo>Urban_Problem__c</referenceTo>
    <relationshipLabel>Mobility Initiatives</relationshipLabel>
    <relationshipName>Mobility_Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>