force-app/main/default/objects/Mobility_Initiative__c/fields/Stage_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entry_Date__c</fullName>
    <label>Stage Entry Date</label>
    <type>Date</type>
</CustomField>