force-app/main/default/objects/Mobility_Initiative__c/validationRules/Require_Approval_And_Owner_For_Execution.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Approval_And_Owner_For_Execution</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Initiative_Status__c, &quot;In Execution&quot;),
  OR(
    NOT(ISPICKVAL(Approval_Status__c, &quot;Approved&quot;)),
    ISBLANK(Initiative_Owner__c)
  )
)</errorConditionFormula>
    <errorMessage>Only approved initiatives with an assigned owner can move to execution.</errorMessage>
</ValidationRule>