force-app/main/default/objects/Mobility_Initiative__c/validationRules/Require_Core_When_Proposed.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Core_When_Proposed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Initiative_Status__c, &quot;Proposed&quot;),
  OR(
    ISBLANK(Initiative_Title__c),
    ISPICKVAL(Priority_Level__c, &quot;&quot;),
    ISBLANK(Owning_Department__c)
  )
)</errorConditionFormula>
    <errorMessage>To propose an initiative, add Priority, Owning Department, and a clear title.</errorMessage>
</ValidationRule>