force-app/main/default/objects/Mobility_Initiative__c/validationRules/Require_Dates_When_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Dates_When_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Approval_Status__c, &quot;Approved&quot;),
  OR(
    ISBLANK(Planned_Start_Date__c),
    ISBLANK(Planned_End_Date__c)
  )
)</errorConditionFormula>
    <errorMessage>Approved initiatives must have finalized start and end dates</errorMessage>
</ValidationRule>