force-app/main/default/objects/Mobility_Initiative__c/validationRules/Require_Planning_Submitting_For_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Planning_Submitting_For_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Approval_Status__c, &quot;Pending Approval&quot;),
  OR(
    ISBLANK(Planned_Start_Date__c),
    ISBLANK(Planned_End_Date__c),
    ISBLANK(Initiative_Owner__c)
  )
)</errorConditionFormula>
    <errorMessage>Provide planned dates and assign an Initiative Owner before submitting for approval</errorMessage>
</ValidationRule>