force-app/main/default/objects/Mobility_Initiative__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Initiative_Title__c</columns>
    <columns>Initiative_Status__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Priority_Level__c</columns>
    <columns>Owning_Department__c</columns>
    <columns>Related_Urban_Problem__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>